ISS-11-17-49 - Fixed Spacing below Main Hero Box

--- a/css/resources.css
+++ b/css/resources.css
@@ -321,14 +321,14 @@
     }
 
     .hpp-dtc-m-hero.internal-hero .content {
-        margin-bottom: 4rem;
+        margin-bottom: 30px;
         padding: 0 15px !important;
     }
 
     .hpp-dtc-m-hero.internal-hero.resources-hero .content .pre-title {
         position: relative;
         left: 0;
-        margin-top: 3.5rem;
+        margin-top: 24px;
     }
 
     .hpp-dtc-m-hero .content {
